# advent_of_code

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/problems/: day_four.rs  day_nine.rs  day_one.rs  day_seven.rs  day_six.rs  day_three.rs  day_two.rs  mod.rs  utility.rs
src/problems/year_2020/: day_one.rs  day_two.rs
src/problems/year_2021/: day_eight.rs  day_five.rs  day_four.rs  day_one.rs  day_three.rs  day_two.rs  mod.rs  utility.rs
