[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"
authors = [ "Alex Lee <westford14@gmail.com>" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
counter = "0.5.2"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
